# gundelsby.com

./: Gemfile  README.md  _config.yml  cv.md  foredrag.md  index.md  papers.md  robots.txt
.github/workflows/: main.yml  update-papers.yml
_includes/: head.html  schema-person.html
mcp/: .gitignore  PERFORMANCE_IMPROVEMENTS.md  README.md  TESTING.md  TOOLS_GUIDE.md  interactive_test.py  pyproject.toml  test_server.py
mcp/src/gundelsby_mcp/: __init__.py  server.py
scripts/: README.md  update_papers.py
